// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 1`] = `
<div>
  <button
    class="sc-bwzfXH fBjBVO"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-htpNat iadPrF"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 2`] = `
<div>
  <span>
    <button
      class="sc-bwzfXH fBjBVO"
      data-testid="confirmation-button-confirm"
    >
      <i
        class="sc-bxivhb fIACqm"
      />
    </button>
    <button
      class="sc-bwzfXH fBjBVO"
      data-testid="confirmation-button-cancel"
    >
      <i
        class="sc-ifAKCX cJHbKy"
      />
    </button>
  </span>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 3`] = `
<div>
  <button
    class="sc-bwzfXH fBjBVO"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-EHOje SRmKD"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 4`] = `
<div>
  <button
    class="sc-bwzfXH fBjBVO"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-htoDjs cSwGEq"
    />
  </button>
</div>
`;
